refact: simplified code